--- a/angular/app/src/app/app.component.html
+++ b/angular/app/src/app/app.component.html
@@ -1,7 +1,7 @@
 <app-header></app-header>
 <div class="row">
     <div class="col-md-2" style="background-color: darkgray">
-      <app-menu></app-menu>
+      <app-menu *ngIf="render"></app-menu>
     </div>
     <div class="col-md-8">
       <router-outlet></router-outlet>
