--- a/angular/app/src/app/user-management/user-management.component.html
+++ b/angular/app/src/app/user-management/user-management.component.html
@@ -1,9 +1,4 @@
-<app-user-admin-view
-  (selectedUserEmitter)="setSelectedUser($event)"
-  [user] = user
-  [active] = active
-></app-user-admin-view>
-
+<router-outlet></router-outlet>
 <h4>Current user: {{user?user.username:''}}</h4>
 
 <div class="row d-flex justify-content-center">
