--- a/angular/app/src/app/menu/menu.component.html
+++ b/angular/app/src/app/menu/menu.component.html
@@ -1,7 +1,8 @@
 <nav class="nav flex-column">
   <a class="nav-link" *ngIf="!isAdmin" [routerLink]="['/usermanagement']">User Details</a>
   <a class="nav-link" *ngIf="isAdmin" [routerLink]="['/usermanagement/admin']">User Details</a>
-  <a class="nav-link" [routerLink]="['/groupmanagement']">Group Management</a>
+  <a class="nav-link" *ngIf="!isAdmin" [routerLink]="['/groupmanagement']">Group Management</a>
+  <a class="nav-link" *ngIf="isAdmin" [routerLink]="['/groupmanagement/admin']">Group Management</a>
   <a class="nav-link" [routerLink]="['/calendar']">Calendar</a>
 </nav>
 
