working on calendar permissions

--- a/angular/app/src/app/calendar/calendar.component.html
+++ b/angular/app/src/app/calendar/calendar.component.html
@@ -127,7 +127,7 @@
   </div>
 </ng-template>
 
-<p-panel header="User selection" [toggleable]="false">
+<p-panel header="User selection" [toggleable]="false" *ngIf="isGroupOwner">
   <div class="row">
     <form #userSelectionForm="ngForm">
     <div class="col-md-8">
