making difference between admin and calendar owner

--- a/angular/app/src/app/calendar/calendar-admin/calendar-admin.component.html
+++ b/angular/app/src/app/calendar/calendar-admin/calendar-admin.component.html
@@ -13,6 +13,7 @@
               id="selectUserCalendar"
               name="calendarUser"
               [options]="users"
+              [group] = true
               [(ngModel)]="selectedUser"
               ngModel
               placeholder="Choose"
