--- a/angular/app/src/app/calendar/calendar.component.html
+++ b/angular/app/src/app/calendar/calendar.component.html
@@ -127,7 +127,7 @@
   </div>
 </ng-template>
 
-<router-outlet></router-outlet>
+<app-calendar-admin *ngIf="isAdmin"></app-calendar-admin>
 
 <br><br>
 
