--- a/angular/app/src/app/user-management/user-management.component.html
+++ b/angular/app/src/app/user-management/user-management.component.html
@@ -1,4 +1,4 @@
-<router-outlet></router-outlet>
+<app-user-admin-view *ngIf="isAdmin"></app-user-admin-view>
 <h4>Current user: {{user?user.username:''}}</h4>
 
 <div class="row d-flex justify-content-center">
