working on pw reset

--- a/angular/app/src/app/password-reset/password-reset.component.html
+++ b/angular/app/src/app/password-reset/password-reset.component.html
@@ -1,1 +1,32 @@
-<p>password-reset works!</p>
+<h3>Resetting password</h3>
+<form #pwReset="ngForm" (ngSubmit)="onSubmit(pwReset)" [appMustMatch]="['password', 'confirmPassword']">
+  <div *ngIf="!token">
+  <div class="row">
+    <div class="col">
+      <label for="username">Username: </label>
+      <input type="text" class="form-control" id="username" name="username" ngModel required>
+    </div>
+  </div>
+    <div class="row">
+      <div class="col">
+        <label for="email">Email: </label>
+        <input type="email" class="form-control" id="email" name="email" ngModel required>
+      </div>
+    </div>
+  </div>
+  <div *ngIf="token">
+    <div class="row">
+      <div class="col">
+        <label for="password">Password: </label>
+        <input type="text" class="form-control" id="password" name="password" ngModel required>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col">
+        <label for="cpassword">Confirm password: </label>
+        <input type="email" class="form-control" id="cpassword" name="cpassword" ngModel required>
+      </div>
+    </div>
+  </div>
+  <button type="submit" class="btn btn-primary">Reset</button>
+</form>
