working on event history

--- a/angular/app/src/app/menu/menu.component.html
+++ b/angular/app/src/app/menu/menu.component.html
@@ -1,6 +1,7 @@
 <nav class="nav flex-column" *ngIf="true" style="background-color: darkgray; height:100%">
   <a class="nav-link" [routerLink]="['/usermanagement']">User Details</a>
   <a class="nav-link" *ngIf="isGroupOwnerOrAdmin" [routerLink]="['/groupmanagement']">Group Management</a>
+  <a class="nav-link" *ngIf="isGroupOwnerOrAdmin" [routerLink]="['/journal']">Event Journal</a>
   <a class="nav-link" [routerLink]="['/calendar']">Calendar</a>
   <a class="nav-link" [routerLink]="['/login']" (click)="onLogout()">Logout</a>
 </nav>
