improving header element

--- a/angular/app/src/app/app.component.html
+++ b/angular/app/src/app/app.component.html
@@ -1,9 +1,9 @@
 <app-header></app-header>
-<div class="row" style="height: 150%; width: 100%; overflow: hidden;">
+<div class="row" style="height: 200%; width: 100%; overflow: hidden;">
   <div class="col-md-2" *ngIf="render">
     <app-menu></app-menu>
   </div>
-  <div class="col">
+  <div class="col" style="margin-top: 20px;">
     <router-outlet></router-outlet>
   </div>
 </div>
