--- a/angular/app/src/app/header/header.component.html
+++ b/angular/app/src/app/header/header.component.html
@@ -1,3 +1,35 @@
-<nav class="navbar navbar-dark bg-dark">
-  <p class="navbar navbar-brand">HEADER</p>
+<nav class="navbar navbar-dark bg-dark" style="min-height: 80px;">
+  <div class="row" *ngIf="render" style="width: 100%">
+    <div class="col">
+      <h3 style="position: absolute; bottom: 0;">Current User: {{user.username}}</h3>
+    </div>
+    <div class="col">
+      <div class="row justify-content-end" *ngIf="roles.length>0">
+        <div class="col" style="display: contents">
+          <label for="roles" style="margin-right: 5px">Roles: </label>
+          <div id="roles" *ngFor="let role of roles" style="margin-right: 5px">
+            {{role}}
+          </div>
+        </div>
+      </div>
+
+      <div class="row justify-content-end" *ngIf="groups.length>0">
+        <div class="col" style="display: contents">
+          <label for="groups" style="margin-right: 5px">Groups: </label>
+          <div id="groups" *ngFor="let role of groups" style="margin-right: 5px">
+            {{role.split('_')[1]}}
+          </div>
+        </div>
+      </div>
+
+      <div class="row justify-content-end" *ngIf="member.length>0">
+        <div class="col" style="display: contents">
+          <label for="member" style="margin-right: 5px">Member of: </label>
+          <div id="member" *ngFor="let role of member" style="margin-right: 5px">
+            {{role.split('_')[1]}}
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
 </nav>
