--- a/angular/app/src/app/password-reset/password-reset.component.html
+++ b/angular/app/src/app/password-reset/password-reset.component.html
@@ -1,14 +1,14 @@
 <h3>Resetting password</h3>
-<form #pwReset="ngForm" (ngSubmit)="onSubmit(pwReset)" [appMustMatch]="['password', 'confirmPassword']">
+<form #pwReset="ngForm" (ngSubmit)="onSubmit(pwReset)" [appMustMatch]="['password', 'confirmPassword']" style="margin: 5px">
   <div *ngIf="!token">
   <div class="row">
-    <div class="col">
+    <div class="col-md-4">
       <label for="username">Username: </label>
       <input type="text" class="form-control" id="username" name="username" ngModel required>
     </div>
   </div>
     <div class="row">
-      <div class="col">
+      <div class="col-md-4">
         <label for="email">Email: </label>
         <input type="email" class="form-control" id="email" name="email" ngModel required>
       </div>
@@ -16,17 +16,17 @@
   </div>
   <div *ngIf="token">
     <div class="row">
-      <div class="col">
+      <div class="col-md-4">
         <label for="password">Password: </label>
         <input type="text" class="form-control" id="password" name="password" ngModel required>
       </div>
     </div>
     <div class="row">
-      <div class="col">
+      <div class="col-md-4">
         <label for="cpassword">Confirm password: </label>
         <input type="email" class="form-control" id="cpassword" name="cpassword" ngModel required>
       </div>
     </div>
   </div>
-  <button type="submit" class="btn btn-primary">Reset</button>
+  <button type="submit" class="btn btn-primary" style="margin-top: 3px">Reset</button>
 </form>
