--- a/angular/app/src/app/registration/registration.component.html
+++ b/angular/app/src/app/registration/registration.component.html
@@ -38,7 +38,9 @@
         <label for="secAnswer">Answer:</label>
         <input id="secAnswer" type="password" name="secAnswer" class="form-control" ngModel required>
       </div>
-      <button class="btn btn-primary" type="submit">Registration</button>
+      <div style="text-align: center">
+        <button class="btn btn-primary" type="submit">Registration</button>
+      </div>
     </form>
   </div>
 </div>
