--- a/angular/app/src/app/app.component.html
+++ b/angular/app/src/app/app.component.html
@@ -1,3 +1,4 @@
+<p-toast></p-toast>
 <app-header></app-header>
 <div class="row" style="height: 200%; width: 100%; overflow: hidden;">
   <div class="col-md-2" *ngIf="render">
